Navbar signup and login button spacing issue fixed

--- a/client/src/navbar.css
+++ b/client/src/navbar.css
@@ -40,3 +40,14 @@
 .navbar_option:hover .underline {
     width: 100%;
 }
+
+#navbar_signup {
+    float: right;
+    padding-left: 1.7em;
+}
+
+@media (max-width: 400px) {
+    #navbar_signup {
+        padding-left: 1em;
+    }
+}
